--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "class-validator": "^0.14.1",
     "cross-env": "^7.0.3",
     "helmet": "^8.1.0",
+    "nanoid": "^3.3.11",
     "reflect-metadata": "^0.2.0",
     "rxjs": "^7.8.1",
     "winston": "^3.17.0"
